<resources>
    <string name="app_name" translatable="false">Moodo</string>
    <string name="result_dialog_text_loading">Loading…</string>
    <string name="routine_done">Done!</string>
    <!--
    <string name="routine_average_time">"Good, keep up the great work. "</string>
    <string name="routine_fast_time">Really fast done, well done! Remember not to rush.</string>
    -->
    <string name="result_dialog_feedback">How well did the routine go?</string>
    <string name="routine_notification_text">Moodo is running…</string>
    <string name="routine_scores">You got 10 experience points!</string>
    <string name="routine_time_set">Set time for routine:</string>
    <string name="routine_title_loading">Loading…</string>
    <string name="settings_about_text">About</string>
    <string name="settings_customizations_text">Skins</string>
    <string name="settings_notifications_text">Notifications</string>
    <string name="settings_sound_text">Sounds</string>
    <string name="settings_title">Settings</string>
    <string name="start_routine_text">Start routine</string>
    <string name="timer_warning">Set time first</string>
    <string name="user_time">Your time:</string>
    <string name="routine_dialog_done" translatable="false">OK</string>
    <string name="json_data_language">en</string>
    <string name="create_routine_empty_subroutines_warning">Please write some text for the subroutine!</string>
    <string name="create_routine_savebutton_warning">Make sure your routine has a name and at least one subroutine</string>
    <string name="create_routine_savebutton_text">Save routine</string>
    <string name="create_routine_namefield_hint">Routine name</string>
    <string name="create_routine_subroutine_hint">Subroutine description</string>
    <string name="create_routine_add_subroutine_button">Add subroutine</string>
    <string name="subroutine_description">Subroutine description</string>
    <string name="routine_name_add">Routine name</string>
    <string name="add_subroutine_custom">Add subroutine</string>
    <string name="cancel_custom_routine">Cancel</string>
    <string name="preview_subroutines">Preview subroutines</string>
    <string name="moodo_icon">Moodo icon</string>
    <string name="team_names" translatable="false">Miko Kauhanen\nErika Markkinen\nLauri Latva-Kyyny\nLassi Markkinen</string>
    <string name="team_roles">Scrummaster:\nGraphics:\nProgrammer:\nProgrammer:</string>
    <string name="team_title">Team</string>
    <string name="team_icon">Team icon</string>
    <string name="about_info">
        Moodo has been developed by BBA, Business Information Systems students of Tampere University of Applied Sciences in co-operation with the “Nepsy Youth Services” working group
        coordinated by the Nepsy support team of the City of Tampere. The working group includes the staff from the City of Tampere, experienced experts and members of the Tampere Region Autism Association. The client is the city of Tampere.
    </string>
    <string name="link_Nepsy">http://www.tampere.fi/nepsy</string>
    <string name="link_RoutineCalendar" translatable="false">Check also RoutineCalendar</string>
    <string name="link_RoutineCalendar_URL" translatable="false">https://play.google.com/store/apps/details?id=fi.tuni.tamk.tiko.routinecalendar</string>
    <string name="cancel_routine">Cancel routine</string>
    <string name="open_settings">Open settings</string>
    <string name="open_shop">Open shop</string>
    <string name="open_about">Open about</string>
    <string name="radio_english">English</string>
    <string name="radio_finnish">Finnish</string>
    <string name="tamk_logo" translatable="false">TAMK logo</string>
    <string name="tiko_logo" translatable="false">Tiko logo</string>
    <string name="tampere_logo" translatable="false">Tampere logo</string>
    <string name="stop_routine">Stop routine</string>
    <string name="back_settings">Back from settings</string>
    <string name="result_dialog_levelup">Level up!</string>
    <string name="user_level">Level:</string>
    <string name="sub_dialog_title">Are you sure?</string>
    <string name="sub_dialog_msg">Modify this item?</string>
    <string name="sub_dialog_edit">EDIT</string>
    <string name="sub_routine_delete">DELETE</string>
    <string name="sub_routine_cancel">CANCEL</string>
    <string name="routine_dialog_cancel">CANCEL</string>
    <string name="routine_adapter_ok" translatable="false">OK</string>
    <string name="routine_adapter_edit">Edit subroutine</string>
</resources>
